# utokyo-FSC-IS4029L1-assignment-m1

./: Cargo.toml  README.md  rustfmt.toml
examples/: bezier_mode.toml  bezier_weight.toml  catmull_rom.toml
scripts/: update_examples.nu
src/: args.rs  curve.rs  input.rs  main.rs  output.rs  shader.wgsl  status.rs  term.rs
