[package]
name = "utokyo-FSC-IS4029L1-assignment-m1"
version = "0.0.0"
edition = "2024"

[dependencies]
clap =  { version = "4.5.37", features = ["derive"] }
color-eyre = "0.6.3"
eyre = "0.6.12"
futures = "0.3.31"
image = "0.25.6"
nalgebra = "0.33.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.22"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
wgpu = "25.0.0"
